trunk/WaatInterfaceCore/src/br/com/ceut/waat/interfaces/UIGrammarParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g 2009-10-18 12:44:01

	package br.com.ceut.waat.interfaces;
	import br.com.ceut.waat.interfaces.rules.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class UIGrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FIELD_TYPE", "ID", "INT", "NEWLINE", "WHITESPACE", "'Interface_com_Usuario'", "'-'", "'\"'", "':'", "'{'", "'}'", "'.'", "'Campo'", "';'", "'Botao'", "'Acao'", "'Radio'", "'Checkbox'", "'Select'", "','", "'Escrita'", "'Leitura'"
    };
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int FIELD_TYPE=4;
    public static final int WHITESPACE=8;
    public static final int INT=6;
    public static final int ID=5;
    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__19=19;
    public static final int T__16=16;
    public static final int T__15=15;
    public static final int NEWLINE=7;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int T__10=10;

    // delegates
    // delegators


        public UIGrammarParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public UIGrammarParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return UIGrammarParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g"; }


    public static class uiPrototype_return extends ParserRuleReturnScope {
        public UiPrototype r_uiprototype;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "uiPrototype"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:12:1: uiPrototype returns [UiPrototype r_uiprototype] : 'Interface_com_Usuario' '-' '\"' name= multiWordID '\"' ':' components= htmlComponentList ;
    public final UIGrammarParser.uiPrototype_return uiPrototype() throws RecognitionException {
        UIGrammarParser.uiPrototype_return retval = new UIGrammarParser.uiPrototype_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal1=null;
        Token char_literal2=null;
        Token char_literal3=null;
        Token char_literal4=null;
        Token char_literal5=null;
        UIGrammarParser.multiWordID_return name = null;

        UIGrammarParser.htmlComponentList_return components = null;


        Object string_literal1_tree=null;
        Object char_literal2_tree=null;
        Object char_literal3_tree=null;
        Object char_literal4_tree=null;
        Object char_literal5_tree=null;

        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:13:2: ( 'Interface_com_Usuario' '-' '\"' name= multiWordID '\"' ':' components= htmlComponentList )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:14:3: 'Interface_com_Usuario' '-' '\"' name= multiWordID '\"' ':' components= htmlComponentList
            {
            root_0 = (Object)adaptor.nil();

            string_literal1=(Token)match(input,9,FOLLOW_9_in_uiPrototype35); 
            string_literal1_tree = (Object)adaptor.create(string_literal1);
            adaptor.addChild(root_0, string_literal1_tree);

            char_literal2=(Token)match(input,10,FOLLOW_10_in_uiPrototype37); 
            char_literal2_tree = (Object)adaptor.create(char_literal2);
            adaptor.addChild(root_0, char_literal2_tree);

            char_literal3=(Token)match(input,11,FOLLOW_11_in_uiPrototype39); 
            char_literal3_tree = (Object)adaptor.create(char_literal3);
            adaptor.addChild(root_0, char_literal3_tree);

            pushFollow(FOLLOW_multiWordID_in_uiPrototype43);
            name=multiWordID();

            state._fsp--;

            adaptor.addChild(root_0, name.getTree());
            char_literal4=(Token)match(input,11,FOLLOW_11_in_uiPrototype45); 
            char_literal4_tree = (Object)adaptor.create(char_literal4);
            adaptor.addChild(root_0, char_literal4_tree);

            char_literal5=(Token)match(input,12,FOLLOW_12_in_uiPrototype47); 
            char_literal5_tree = (Object)adaptor.create(char_literal5);
            adaptor.addChild(root_0, char_literal5_tree);

            pushFollow(FOLLOW_htmlComponentList_in_uiPrototype51);
            components=htmlComponentList();

            state._fsp--;

            adaptor.addChild(root_0, components.getTree());
             retval.r_uiprototype = new UiPrototype(name.r_multiwordid, components.r_htmlcomponentlist); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "uiPrototype"

    public static class htmlComponentList_return extends ParserRuleReturnScope {
        public List<HTMLComponent> r_htmlcomponentlist;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "htmlComponentList"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:18:1: htmlComponentList returns [List<HTMLComponent> r_htmlcomponentlist] : (htmlcomponent= htmlComponent )+ ;
    public final UIGrammarParser.htmlComponentList_return htmlComponentList() throws RecognitionException {
        UIGrammarParser.htmlComponentList_return retval = new UIGrammarParser.htmlComponentList_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        UIGrammarParser.htmlComponent_return htmlcomponent = null;



         retval.r_htmlcomponentlist = new ArrayList<HTMLComponent>(); 
        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:20:2: ( (htmlcomponent= htmlComponent )+ )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:20:4: (htmlcomponent= htmlComponent )+
            {
            root_0 = (Object)adaptor.nil();

            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:20:4: (htmlcomponent= htmlComponent )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==16||LA1_0==18||(LA1_0>=20 && LA1_0<=22)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:20:5: htmlcomponent= htmlComponent
            	    {
            	    pushFollow(FOLLOW_htmlComponent_in_htmlComponentList79);
            	    htmlcomponent=htmlComponent();

            	    state._fsp--;

            	    adaptor.addChild(root_0, htmlcomponent.getTree());
            	     retval.r_htmlcomponentlist.add(htmlcomponent.r_htmlcomponent); 

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "htmlComponentList"

    public static class htmlComponent_return extends ParserRuleReturnScope {
        public HTMLComponent r_htmlcomponent;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "htmlComponent"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:23:1: htmlComponent returns [HTMLComponent r_htmlcomponent] : (s= select | f= field | b= button | rb= radioButton | cb= checkBox );
    public final UIGrammarParser.htmlComponent_return htmlComponent() throws RecognitionException {
        UIGrammarParser.htmlComponent_return retval = new UIGrammarParser.htmlComponent_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        UIGrammarParser.select_return s = null;

        UIGrammarParser.field_return f = null;

        UIGrammarParser.button_return b = null;

        UIGrammarParser.radioButton_return rb = null;

        UIGrammarParser.checkBox_return cb = null;



        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:24:2: (s= select | f= field | b= button | rb= radioButton | cb= checkBox )
            int alt2=5;
            switch ( input.LA(1) ) {
            case 22:
                {
                alt2=1;
                }
                break;
            case 16:
                {
                alt2=2;
                }
                break;
            case 18:
                {
                alt2=3;
                }
                break;
            case 20:
                {
                alt2=4;
                }
                break;
            case 21:
                {
                alt2=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:25:3: s= select
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_select_in_htmlComponent103);
                    s=select();

                    state._fsp--;

                    adaptor.addChild(root_0, s.getTree());
                     retval.r_htmlcomponent = s.r_select; 

                    }
                    break;
                case 2 :
                    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:26:3: f= field
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_field_in_htmlComponent113);
                    f=field();

                    state._fsp--;

                    adaptor.addChild(root_0, f.getTree());
                     retval.r_htmlcomponent = f.r_field; 

                    }
                    break;
                case 3 :
                    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:27:3: b= button
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_button_in_htmlComponent123);
                    b=button();

                    state._fsp--;

                    adaptor.addChild(root_0, b.getTree());
                     retval.r_htmlcomponent = b.r_button; 

                    }
                    break;
                case 4 :
                    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:28:3: rb= radioButton
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_radioButton_in_htmlComponent133);
                    rb=radioButton();

                    state._fsp--;

                    adaptor.addChild(root_0, rb.getTree());
                     retval.r_htmlcomponent = rb.r_radiobutton; 

                    }
                    break;
                case 5 :
                    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:29:3: cb= checkBox
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_checkBox_in_htmlComponent143);
                    cb=checkBox();

                    state._fsp--;

                    adaptor.addChild(root_0, cb.getTree());
                     retval.r_htmlcomponent = cb.r_checkbox; 

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "htmlComponent"

    public static class attributeReference_return extends ParserRuleReturnScope {
        public AttributeReference r_attributereference;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "attributeReference"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:32:1: attributeReference returns [AttributeReference r_attributereference] : '{' attributeid= attributeId '}' ;
    public final UIGrammarParser.attributeReference_return attributeReference() throws RecognitionException {
        UIGrammarParser.attributeReference_return retval = new UIGrammarParser.attributeReference_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal6=null;
        Token char_literal7=null;
        UIGrammarParser.attributeId_return attributeid = null;


        Object char_literal6_tree=null;
        Object char_literal7_tree=null;

        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:33:2: ( '{' attributeid= attributeId '}' )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:33:4: '{' attributeid= attributeId '}'
            {
            root_0 = (Object)adaptor.nil();

            char_literal6=(Token)match(input,13,FOLLOW_13_in_attributeReference160); 
            char_literal6_tree = (Object)adaptor.create(char_literal6);
            adaptor.addChild(root_0, char_literal6_tree);

            pushFollow(FOLLOW_attributeId_in_attributeReference164);
            attributeid=attributeId();

            state._fsp--;

            adaptor.addChild(root_0, attributeid.getTree());
            char_literal7=(Token)match(input,14,FOLLOW_14_in_attributeReference166); 
            char_literal7_tree = (Object)adaptor.create(char_literal7);
            adaptor.addChild(root_0, char_literal7_tree);

             retval.r_attributereference = new AttributeReference(attributeid.r_attributeid); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "attributeReference"

    public static class attributeId_return extends ParserRuleReturnScope {
        public AttributeId r_attributeid;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "attributeId"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:36:1: attributeId returns [AttributeId r_attributeid] : entity= multiWordID '.' (attribute= multiWordID | attributeid= attributeId ) ;
    public final UIGrammarParser.attributeId_return attributeId() throws RecognitionException {
        UIGrammarParser.attributeId_return retval = new UIGrammarParser.attributeId_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal8=null;
        UIGrammarParser.multiWordID_return entity = null;

        UIGrammarParser.multiWordID_return attribute = null;

        UIGrammarParser.attributeId_return attributeid = null;


        Object char_literal8_tree=null;

        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:37:2: (entity= multiWordID '.' (attribute= multiWordID | attributeid= attributeId ) )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:37:4: entity= multiWordID '.' (attribute= multiWordID | attributeid= attributeId )
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_multiWordID_in_attributeId185);
            entity=multiWordID();

            state._fsp--;

            adaptor.addChild(root_0, entity.getTree());
            char_literal8=(Token)match(input,15,FOLLOW_15_in_attributeId187); 
            char_literal8_tree = (Object)adaptor.create(char_literal8);
            adaptor.addChild(root_0, char_literal8_tree);

            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:37:27: (attribute= multiWordID | attributeid= attributeId )
            int alt3=2;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:37:28: attribute= multiWordID
                    {
                    pushFollow(FOLLOW_multiWordID_in_attributeId192);
                    attribute=multiWordID();

                    state._fsp--;

                    adaptor.addChild(root_0, attribute.getTree());

                    }
                    break;
                case 2 :
                    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:37:52: attributeid= attributeId
                    {
                    pushFollow(FOLLOW_attributeId_in_attributeId198);
                    attributeid=attributeId();

                    state._fsp--;

                    adaptor.addChild(root_0, attributeid.getTree());

                    }
                    break;

            }


            			if(attribute != null) {
            				retval.r_attributeid = new AttributeId(entity.r_multiwordid, attribute.r_multiwordid, null);
            			} else if(attributeid != null) {
            				retval.r_attributeid = new AttributeId(entity.r_multiwordid, null, attributeid.r_attributeid);
            			}
            		

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "attributeId"

    public static class field_return extends ParserRuleReturnScope {
        public HTMLComponentField r_field;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "field"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:47:1: field returns [HTMLComponentField r_field] : 'Campo' type= FIELD_TYPE '\"' name= multiWordID '\"' attributereference= attributeReference writeorread= writeOrReadOnly ';' ;
    public final UIGrammarParser.field_return field() throws RecognitionException {
        UIGrammarParser.field_return retval = new UIGrammarParser.field_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token type=null;
        Token string_literal9=null;
        Token char_literal10=null;
        Token char_literal11=null;
        Token char_literal12=null;
        UIGrammarParser.multiWordID_return name = null;

        UIGrammarParser.attributeReference_return attributereference = null;

        UIGrammarParser.writeOrReadOnly_return writeorread = null;


        Object type_tree=null;
        Object string_literal9_tree=null;
        Object char_literal10_tree=null;
        Object char_literal11_tree=null;
        Object char_literal12_tree=null;

        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:48:2: ( 'Campo' type= FIELD_TYPE '\"' name= multiWordID '\"' attributereference= attributeReference writeorread= writeOrReadOnly ';' )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:49:3: 'Campo' type= FIELD_TYPE '\"' name= multiWordID '\"' attributereference= attributeReference writeorread= writeOrReadOnly ';'
            {
            root_0 = (Object)adaptor.nil();

            string_literal9=(Token)match(input,16,FOLLOW_16_in_field221); 
            string_literal9_tree = (Object)adaptor.create(string_literal9);
            adaptor.addChild(root_0, string_literal9_tree);

            type=(Token)match(input,FIELD_TYPE,FOLLOW_FIELD_TYPE_in_field225); 
            type_tree = (Object)adaptor.create(type);
            adaptor.addChild(root_0, type_tree);

            char_literal10=(Token)match(input,11,FOLLOW_11_in_field227); 
            char_literal10_tree = (Object)adaptor.create(char_literal10);
            adaptor.addChild(root_0, char_literal10_tree);

            pushFollow(FOLLOW_multiWordID_in_field231);
            name=multiWordID();

            state._fsp--;

            adaptor.addChild(root_0, name.getTree());
            char_literal11=(Token)match(input,11,FOLLOW_11_in_field233); 
            char_literal11_tree = (Object)adaptor.create(char_literal11);
            adaptor.addChild(root_0, char_literal11_tree);

            pushFollow(FOLLOW_attributeReference_in_field237);
            attributereference=attributeReference();

            state._fsp--;

            adaptor.addChild(root_0, attributereference.getTree());
            pushFollow(FOLLOW_writeOrReadOnly_in_field241);
            writeorread=writeOrReadOnly();

            state._fsp--;

            adaptor.addChild(root_0, writeorread.getTree());
            char_literal12=(Token)match(input,17,FOLLOW_17_in_field243); 
            char_literal12_tree = (Object)adaptor.create(char_literal12);
            adaptor.addChild(root_0, char_literal12_tree);

             retval.r_field = new HTMLComponentField(type.getText(), name.r_multiwordid, attributereference.r_attributereference, writeorread.r_writeorreadonly); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "field"

    public static class button_return extends ParserRuleReturnScope {
        public HTMLComponentButton r_button;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "button"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:52:1: button returns [HTMLComponentButton r_button] : 'Botao' '\"' name= multiWordID '\"' 'Acao' '\"' action= multiWordID '\"' ';' ;
    public final UIGrammarParser.button_return button() throws RecognitionException {
        UIGrammarParser.button_return retval = new UIGrammarParser.button_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal13=null;
        Token char_literal14=null;
        Token char_literal15=null;
        Token string_literal16=null;
        Token char_literal17=null;
        Token char_literal18=null;
        Token char_literal19=null;
        UIGrammarParser.multiWordID_return name = null;

        UIGrammarParser.multiWordID_return action = null;


        Object string_literal13_tree=null;
        Object char_literal14_tree=null;
        Object char_literal15_tree=null;
        Object string_literal16_tree=null;
        Object char_literal17_tree=null;
        Object char_literal18_tree=null;
        Object char_literal19_tree=null;

        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:53:2: ( 'Botao' '\"' name= multiWordID '\"' 'Acao' '\"' action= multiWordID '\"' ';' )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:54:3: 'Botao' '\"' name= multiWordID '\"' 'Acao' '\"' action= multiWordID '\"' ';'
            {
            root_0 = (Object)adaptor.nil();

            string_literal13=(Token)match(input,18,FOLLOW_18_in_button264); 
            string_literal13_tree = (Object)adaptor.create(string_literal13);
            adaptor.addChild(root_0, string_literal13_tree);

            char_literal14=(Token)match(input,11,FOLLOW_11_in_button266); 
            char_literal14_tree = (Object)adaptor.create(char_literal14);
            adaptor.addChild(root_0, char_literal14_tree);

            pushFollow(FOLLOW_multiWordID_in_button270);
            name=multiWordID();

            state._fsp--;

            adaptor.addChild(root_0, name.getTree());
            char_literal15=(Token)match(input,11,FOLLOW_11_in_button272); 
            char_literal15_tree = (Object)adaptor.create(char_literal15);
            adaptor.addChild(root_0, char_literal15_tree);

            string_literal16=(Token)match(input,19,FOLLOW_19_in_button274); 
            string_literal16_tree = (Object)adaptor.create(string_literal16);
            adaptor.addChild(root_0, string_literal16_tree);

            char_literal17=(Token)match(input,11,FOLLOW_11_in_button276); 
            char_literal17_tree = (Object)adaptor.create(char_literal17);
            adaptor.addChild(root_0, char_literal17_tree);

            pushFollow(FOLLOW_multiWordID_in_button280);
            action=multiWordID();

            state._fsp--;

            adaptor.addChild(root_0, action.getTree());
            char_literal18=(Token)match(input,11,FOLLOW_11_in_button282); 
            char_literal18_tree = (Object)adaptor.create(char_literal18);
            adaptor.addChild(root_0, char_literal18_tree);

            char_literal19=(Token)match(input,17,FOLLOW_17_in_button284); 
            char_literal19_tree = (Object)adaptor.create(char_literal19);
            adaptor.addChild(root_0, char_literal19_tree);

             retval.r_button = new HTMLComponentButton(name.r_multiwordid, action.r_multiwordid); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "button"

    public static class radioButton_return extends ParserRuleReturnScope {
        public HTMLComponentRadioButton r_radiobutton;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "radioButton"
    // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:58:1: radioButton returns [HTMLComponentRadioButton r_radiobutton] : 'Radio' '\"' name= multiWordID '\"' attributereference= attributeReference writeorread= writeOrReadOnly ';' ;
    public final UIGrammarParser.radioButton_return radioButton() throws RecognitionException {
        UIGrammarParser.radioButton_return retval = new UIGrammarParser.radioButton_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal20=null;
        Token char_literal21=null;
        Token char_literal22=null;
        Token char_literal23=null;
        UIGrammarParser.multiWordID_return name = null;

        UIGrammarParser.attributeReference_return attributereference = null;

        UIGrammarParser.writeOrReadOnly_return writeorread = null;


        Object string_literal20_tree=null;
        Object char_literal21_tree=null;
        Object char_literal22_tree=null;
        Object char_literal23_tree=null;

        try {
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:59:2: ( 'Radio' '\"' name= multiWordID '\"' attributereference= attributeReference writeorread= writeOrReadOnly ';' )
            // /Users/ernesto/Documents/CEUT/WaatGramaticas/UIGrammar.g:60:3: 'Radio' '\"' name= multiWordID '\"' attributereference= attributeReference writeorread= writeOrReadOnly ';'
            {
            root_0 = (Object)adaptor.nil();

            string_literal20=(Token)match(input,20,FOLLOW_20_in_radioButton305); 
            string_literal20_tree = (Object)adaptor.create(string_literal20);
            adaptor.addChild(root_0, string_literal20_tree);

            char_literal21=(Token)match(input,11,FOLLOW_11_in_radioButton307); 
            char_literal21_tree = (Object)adaptor.create(char_literal21);
            adaptor.addChild(root_0, char_literal21_tree);

            pushFollow(FOLLOW_multiWordID_in_radioButton311);
            name=multiWordID();

            state._fsp--;

            adaptor.addChild(root_0, name.getTree());
            char_literal22=(Token)match(input,11,FOLLOW_11_in_radioButton313); 
            char_literal22_tree = (Object)adaptor.create(char_literal22);
            adaptor.addChild(root_0, char_literal22_tree);

            pushFollow(FOLLOW_attributeReference_in_radioButton317);
            attributereference=attributeReference();

            state._fsp--;

            adaptor.addChild(root_0, attributereference.getTree());
            pushFollow(FOLLOW_writeOrReadOnly_in_radioButton321);
            writeorread=writeOrReadOnly();

            state._fsp--;

            adaptor.addChild(root_0, writeorread.getTree());
            char_literal23=(Token)match(input,17,FOLLOW_17_in_radioButton323); 
            char_literal23_tree = (Object)adaptor.create(char_literal23);
            adaptor.addChild(root_0, char_literal23_tree);

             retval.r_radiobutton = new HTMLComponentRadioButton(name.r_multiwordid, attributereference.r_attributereference, writeorread.r_writeorreadonly); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "radioButton"
